# mcp-hub

./: CLAUDE.md  Dockerfile  pyproject.toml
.claude/: hub-agent.json  settings.local.json
src/mcp_hub/: __init__.py  cli.py  server.py  session_registry.py
tests/: test_cli.py  test_fanout_parallel.py  test_get_channel_messages.py  test_lifecycle_integration.py  test_priority_routing.py  test_session_registry.py  test_streamable_silent_drop.py
