[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hub"
version = "0.1.0"
description = "Inter-agent messaging hub — connect multiple Claude sessions via MCP"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
mcp-hub = "mcp_hub.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_hub"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
