[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hub"
version = "0.1.0"
description = "Inter-agent messaging hub — connect multiple Claude sessions via MCP"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]

[project.scripts]
mcp-hub = "mcp_hub.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_hub"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
