[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-hub"
version = "0.1.0"
description = "Inter-agent messaging hub — connect multiple Claude sessions via MCP"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]

[project.scripts]
mcp-hub = "mcp_hub.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_hub"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # Test-shutdown noise: the live_hub fixture spawns the server in a
    # daemon thread that dies abruptly when the test exits, occasionally
    # leaving an unawaited coroutine on the error path. Production code
    # is unaffected; suppress to keep test output clean.
    "ignore:coroutine '_query_hub' was never awaited:RuntimeWarning",
    # Upstream websockets / uvicorn deprecation warnings fired during
    # test setup. Not actionable on our side; would resolve when uvicorn
    # / mcp SDK upgrade their websockets usage.
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn",
]
